intro and requirements

--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 \usepackage[english]{babel}
 
 % page layout
-\usepackage{float}
+\usepackage{float}  
 \usepackage{ragged2e}
 \usepackage{rotating}
 
@@ -103,9 +103,9 @@
 \label{chp:intro}
 \input{introduction.tex}
 
-\chapter{Architecture constraints}
-\label{chp:arch_constr}
-\input{arch_constraints.tex}
+\chapter{Requirements}
+\label{chp:requirements}
+\input{requirements.tex}
 
 \chapter{System scope and context}
 \label{chp:syst_context}
