solution strategy+ moving usecases to different chapter

--- a/main.tex
+++ b/main.tex
@@ -107,6 +107,10 @@
 \label{chp:requirements}
 \input{requirements.tex}
 
+\chapter{Main Use Cases}
+\label{chp:usecases}
+\input{usecases.tex}
+
 \chapter{System scope and context}
 \label{chp:syst_context}
 \input{syst_context.tex}
