solution strategy-reliability

--- a/references.bib
+++ b/references.bib
@@ -2,4 +2,9 @@
   title = "Pulsate",
   url = "http://academy.pulsatehq.com/bluetooth-beacons",
   urldate = "2016-08-13"
-}
+},
+
+@misc{iso,
+  title="iso 25010",
+  url="http://www.iso.org/iso/catalogue_detail.htm?csnumber=35733",
+  urldate = "2011-03-01"}
