--- a/introduction.tex
+++ b/introduction.tex
@@ -9,6 +9,13 @@ The aim of this new technology is to facilitate the journey of train passangers,
 
 In this document we are presenting the architecture of our system. In the next chapters you will be introduced to the Stakeholders of the systems and their concerns, the requirements, functional and non-functional.  In section 3, we will briefly analyze the business context and the benefits that \ac{ET} will brings in terms of business. In section 4, the solution strategy is presented, in terms of our main key drivers. Section 5 outlines the building block view, whereas chapter 6 and 7 introduce the runtime and deployment view. The architecture of our system will be concluded with the design decisions and quality scenarios. 
 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{Pictures/system.png}
+  \caption{Overview of the System}
+  \label{fig:system}
+\end{figure}
+
 \section{Quality goals}
 
 The top three goals of the architecture of Easy Ticketing whose fulfillment is of highest importance to the major stakeholders (as agreed between them) are listed below:
