--- a/main.tex
+++ b/main.tex
@@ -115,17 +115,9 @@
 \label{chp:sol_strategy}
 \input{sol_strategy.tex}
 
-\chapter{Building block view}
-\label{chp:build_block}
-\input{build_block.tex}
-
-\chapter{Runtime view}
-\label{chp:runtime}
-\input{runtime.tex}
-
-\chapter{Deployment view}
-\label{chp:deployment}
-\input{deployment.tex}
+\chapter{Software architecture}
+\label{chp:soft_arch}
+\input{architecture.tex}
 
 \chapter{Concepts}
 \label{chp:concepts}
