--- a/business_context.tex
+++ b/business_context.tex
@@ -4,5 +4,7 @@ The system will present the user with the choice of making an automated payment 
 
 A second important target for our system will be represented by companies providing travelling services by train, which may include governmental institutions or different private companies.
 
+\section{Business drivers}
+
 \section{Logical view}
 
