--- a/syst_context.tex
+++ b/syst_context.tex
@@ -4,6 +4,10 @@ This section outlines the main relations between the system and its environment,
 \label{sec:business_context}
 \input{business_context.tex}
 
+\section{Domain model}
+\label{sec:domain_model}
+\input{domain_model.tex}
+
 \section{Technical context}
 \label{sec:technical_context}
 \input{technical_context.tex}
