--- a/usecases.tex
+++ b/usecases.tex
@@ -2,7 +2,7 @@ The following diagram displays the use cases of the system. The main use cases w
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=500pt]{Pictures/main_use_cases.png}
+	\includegraphics[width=\textwidth]{Pictures/main_use_cases.png}
 	\caption{Main use cases}
 	\label{fig:main_use_cases}
 \end{figure}
@@ -42,7 +42,7 @@ The following diagram displays the use cases of the system. The main use cases w
 		\\ \hline
 		\textbf{Related requirements} & NFR2, FR2, NFR3\\ \hline
 	\end{tabularx}
-	\caption{Main use cases - }
+	\caption{Main use cases - use case 1}
 	\label{tbl:uc1}
 \end{table}
 
