domain model text

--- a/domain_model.tex
+++ b/domain_model.tex
@@ -1,3 +1,5 @@
+Figure \ref{fig:domain_model} outlines the most significant entities taking part in or being used by the Easy Ticketing system. The system components and their interactions are presented alongside the main external entities needed for different functionalities of the system. The figure also introduces the main actors responsible for the use cases presented in chapter \ref{chp:usecases}.
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\textwidth]{Pictures/domain_model.png}
