--- a/business_context.tex
+++ b/business_context.tex
@@ -5,6 +5,13 @@ The system will present the user with the choice of making an automated payment 
 A second important target for our system will be represented by companies providing travelling services by train, which may include governmental institutions or different private companies.
 
 \section{Business drivers}
+This chapter describes the business forces acting on the system: most important revenue streams and costs and give a justification for the system.
 
-\section{Logical view}
+\subsection{Revenue streams}
+The main revenue stream for the system will consist of the travel service providers. In order to use the Easy Tickting system, they will have to pay a monthly fee which will include storage and maintenance costs. 
+
+Depending on how well the system usage evolves over time, once enough travel service providers decide to use the system, a small monthly fee can be charged to the user as well. Also, the mobile app functionalities can be improved over time and be accessed by the user over a pay-by-use scenario(e.g. check distances travelled over the last period of time, check fees, see a list of possible price reductions for similar journeys).
+
+\subsection{Costs} 
+
 
