--- a/main.tex
+++ b/main.tex
@@ -119,11 +119,11 @@
 \label{chp:sol_strategy}
 \input{sol_strategy.tex}
 
-\chapter{Building block view}
+\chapter{Logical view}
 \label{chp:build_block}
 \input{build_block.tex}
 
-\chapter{Runtime view}
+\chapter{Process view}
 \label{chp:runtime}
 \input{runtime.tex}
 
