--- a/business_context.tex
+++ b/business_context.tex
@@ -13,5 +13,11 @@ The main revenue stream for the system will consist of the travel service provid
 Depending on how well the system usage evolves over time, once enough travel service providers decide to use the system, a small monthly fee can be charged to the user as well. Also, the mobile app functionalities can be improved over time and be accessed by the user over a pay-by-use scenario(e.g. check distances travelled over the last period of time, check fees, see a list of possible price reductions for similar journeys).
 
 \subsection{Costs} 
-
+The costs for the system will be divided in two main groups:
+\begin{itemize}
+	\item \textbf{development costs:} \\
+	these costs will be comprised of installation costs(hardware equipment such as beacons and local servers will be installed and configured inside the trains, central server configuration, backup servers configuration) and software development costs(for the mobile application, databases, computational algorithm for fee calculations).
+	\item \textbf{maintenance costs:} \\
+	maintenance operations will include constant monitoring of the hardrware equipment(remote monitoring and repairs for components inside the trains and a local team for the central server) and a team for additional functionalities(for the mobile app, optimisations of the computational algorithm, etc).
+\end{itemize}
 
