--- a/architecture.tex
+++ b/architecture.tex
@@ -33,5 +33,5 @@ requirements: .. as well as all the performance requirements.
 
 
 \section{Process View}
-\section{Data View}
+%\section{Data View}-- what is data view?
 \section{Physical View}
