--- a/main.tex
+++ b/main.tex
@@ -123,17 +123,21 @@
 \label{chp:soft_arch}
 \input{architecture.tex}
 
-\chapter{Concepts}
-\label{chp:concepts}
-\input{concepts.tex}
+\chapter{Architectural patterns}
+\label{chp:patterns}
+\input{patterns.tex}
 
 \chapter{Design decisions}
 \label{chp:design_decisions}
 \input{design_decisions.tex}
 
-\chapter{Quality scenarios}
-\label{chp:quality_scenarios}
-\input{quality_scenarios.tex}
+\chapter{Evaluation}
+\label{chp:evaluation}
+\input{evaluation.tex}
+
+%\chapter{Quality scenarios}
+%\label{chp:quality_scenarios}
+%\input{quality_scenarios.tex}
 
 \listoftodos[Notes]
 
