--- a/architecture.tex
+++ b/architecture.tex
@@ -31,7 +31,41 @@ requirements: .. as well as all the performance requirements.
 
 \subsection{Element Catalog}
 
-
 \section{Process View}
+This section describes the main processes performed by the system following some of the main use cases presented in chapter \ref{chp:usecases}. The following system sequence diagrams will help detail every such process by displaying the main information flows between different actors and system components in a chronological manner.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{Pictures/seq_diagram_uc1.png}
+	\caption{System sequence diagram- use case 1(Connect phone to beacon)}
+	\label{fig:seqDiagram1}
+\end{figure}
+Figure \ref{fig:seqDiagram1} is a direct mapping of use case 1(connect phone to beacon).
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{Pictures/seq_diagram_payment.png}
+	\caption{System sequence diagram- payment}
+	\label{fig:seqDiagram2}
+\end{figure}
+Figure \ref{fig:seqDiagram2} displays the information flow corresponding to use cases "Disconnect from beacon" "Calculate travel fee" and "Make payment". For this process, the system uses a third party payment service.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{Pictures/seq_diagram_checkAccount.png}
+	\caption{System sequence diagram- Check account details}
+	\label{fig:seqDiagram3}
+\end{figure}
+Figure \ref{fig:seqDiagram3} displays the information flow related to use cases "Register through application", "Check account balance" and "Login through application". This process describes the general outline for different actions the user can perform using the mobile application.
+
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{Pictures/seq_diagram_manualCheckOut.png}
+	\caption{System sequence diagram- Manual checkout}
+	\label{fig:seqDiagram4}
+\end{figure}
+Figure \ref{fig:seqDiagram4} shows the main information flow corresponding to the use case "Manually sign out from journey". This use case was designed as an alternative to the main "Disconnect from beacon" use case which will give users the possibility to manually check out at a particular train station in case of the phone to beacon connection not being available.
+
 %\section{Data View}-- what is data view?
 \section{Physical View}
