--- a/architecture.tex
+++ b/architecture.tex
@@ -10,8 +10,7 @@ This view shows the connections between structural elements, key abstractions an
 
 \subsection{Primary presentation}
 In order to design the software architecture of \ac{ET}, the layers pattern is used. This pattern is best suitable for the system since it gives the opportunity to abstract layers from one another, which increases the availability of the system by modularizing the components. The modularization of the components increases also the scalability and the performance of the system. 
-The system has been structured according to the three-layers approach. The three main components: Mobile app, Interface and the Storage, can be seen in the figure below. This approach will help satisfying the following non-functional
-requirements: .. as well as all the performance requirements.
+The system has been structured according to the three-layers approach. The three main components: Mobile app, Beacon Interface and the Local Storage, and Central storage and Payment system can be seen in the figure below. 
 
 
 \begin{figure}[H]
@@ -22,13 +21,18 @@ requirements: .. as well as all the performance requirements.
 \end{figure}
 
 
-\textbf{Mobile app} is the main component of our system. It will be available for download for the users and it will provide a personalized and unique account for the passengers. They can use this account to login and pay for their ticket, every time they use the trains. The calculation of the ticket fees is also done in this layer. The data collected from this layer is then sent to the other layers.
+\textbf{Mobile app} is the main component of our system. It will be available for download for the users and it will provide a personalized and unique account for the passengers. They can use this account to login and pay for their ticket, every time they use the trains. This layer will also enable a bluetooth connection with the beacon cart. The data collected from this layer is then sent to the other layers. 
 
-\textbf{User Interface} This layer provides the maintenance team access to the system via a graphical user interface. There will be a team that will manage the system in order to check the usage of the system, or to maintain it in general and report any faults or misfunctions to the maintenance team.
+\textbf{Beacon Interface and Local storage} This layer creates a connection with the mobile app layer. Its components are the local storage, where the data gathered from the mobile app will be stored, and the beacon interface which establishes the bluetooth connection with the mobile.
 
-\textbf{Storage and Beacon API} The database and the Beacon Interface are included in this layer. The data that is provided from the Mobile app layer, will be stored in the database after the mobile phone has connected to the beacon.
+\textbf{Central Storage and Payment system} The database and the Beacon Interface are included in this layer. The data that is provided from the Mobile app layer, will be stored in the central database after the mobile phone has connected to the beacon. The calculation of the ticket fees is also done in this layer through the computational center.
 
-
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{Pictures/logical.png}
+  \caption{Logical View}
+  \label{fig:logical}
+\end{figure}
 \subsection{Element Catalog}
 
 \section{Process View}
