--- a/evaluation.tex
+++ b/evaluation.tex
@@ -1,4 +1,17 @@
 \section{Utility tree}
+The output of the utility tree is a list of scenarios that serves as a plan
+for the remainder of the ATAM evaluation. It shows the evaluation team
+where the most important points are and where to examine the architectural
+approaches and risks. The utility tree is composed of the key drivers of the
+system, which in our case are security, reliability, and compatibility.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{Pictures/Utility-tree.png}
+  \caption{Overview of the System}
+  \label{fig:system}
+\end{figure}
+
 \section{Key driver verification}
 \subsection{Security}
 \subsection{Compatibility}
