latex extras + observer pattern

--- a/architecture.tex
+++ b/architecture.tex
@@ -1,3 +1,6 @@
+%!TEX root = main.tex
+
+
 In this chapter the architecture of the system will be described. The 4+1 model will be used. We will be describing  the logical view, the physical view, the process view and the data view. 
 The logical view shows the functional decomposition of the architecture into components.
 the process view shows behavioral aspects of the system, the data flow view defines the data, the relation
