--- a/evaluation.tex
+++ b/evaluation.tex
@@ -1,3 +1,5 @@
+%!TEX root = main.tex
+
 \section{Utility tree}
 The output of the utility tree is a list of scenarios that serves as a plan
 for the remainder of the ATAM evaluation. It shows the evaluation team
