--- a/introduction.tex
+++ b/introduction.tex
@@ -1,3 +1,6 @@
+%!TEX root = main.tex
+
+
 \section{Introduction}
 Traveling by train is one of the most common means of transport in the Netherlands and the Western Europe. The majority of people use trains on a daily basis, to go to school, work, etc. It is quite easy and comfortable, but one common problem, that everyone may relate to is the discomfort of train tickets. The printed tickets might get lost, or a passenger might forget to check in, another one is too late to buy one, etc. 
 
