--- a/patterns/trusted_subsystem.tex
+++ b/patterns/trusted_subsystem.tex
@@ -1,4 +1,7 @@
+%!TEX root = ../main.tex
 
 
 \section{Trusted subsystem}
 
+Trusted Subsystem : The phone needs the credentials of the beacon in order to send its credentials back to it . The beacon receives credentials from the phone and registers it in the system. 
+	
