--- a/requirements.tex
+++ b/requirements.tex
@@ -1,3 +1,5 @@
+%!TEX root = main.tex
+
 In this section the main Stakeholders and the functional and non functional requirements of Easy Ticketing will be introduced.
 
 \section{Stakeholders}
@@ -31,7 +33,7 @@ The following stakeholders are described along with their concerns. These concer
 \section{Key Drivers}
 
 
-In order to determine the most important key drivers for our system, the stakeholders are required to give points to the key drivers according to what they consider as the most important driver for the system. Since the weight of the decision differs among our stakeholders, they are given different amount of points. The train companies (customer) have 150, the architects have 120, the developer team has 100, and the passangers 80. Considering the distribution of the points, the top 3 will be chosen as key drivers of our system. \cref{tbl:key_drivers} below shows how the different stakeholders used there points.
+In order to determine the most important key drivers for our system, the stakeholders are required to give points to the key drivers according to what they consider as the most important driver for the system. Since the weight of the decision differs among our stakeholders, they are given different amount of points. The train companies (customer) have 150, the architects have 120, the developer team has 100, and the passengers 80. Considering the distribution of the points, the top 3 will be chosen as key drivers of our system. \cref{tbl:key_drivers} below shows how the different stakeholders used there points.
 
 \begin{table}[H]
   \centering
