--- a/sol_strategy.tex
+++ b/sol_strategy.tex
@@ -1,3 +1,5 @@
+%!TEX root = main.tex
+
 This chapter aims to discuss and present a concrete solution space for the problems described in chapter  \ref{chp:syst_context}. The solutions provided will directly follow the main key drivers of the project and focus on the problem space using views limited only to these most important attributes.
 
 \section{Security}
