--- a/syst_context.tex
+++ b/syst_context.tex
@@ -1,3 +1,5 @@
+%!TEX root = main.tex
+
 This section outlines the main relations between the system and its environment, external systems or entities with which it interacts. The business and technical contexts in which the system will perform as well as different inter-component communication solutions will be presented in this chapter.
 
 \section{Business context}
