Risk assessment and Key driver ver(incomplete)

--- a/requirements.tex
+++ b/requirements.tex
@@ -162,3 +162,5 @@ A constraints is \cite{web:bus-doc} considered as an element, factor, or subsyst
 \subsection{Business Constraints}
 \subsection{Technological Constraints}
 
+\section{Risk Assessment}
+\input{./risk_assessment.tex}
