--- a/evaluation.tex
+++ b/evaluation.tex
@@ -1,5 +1,4 @@
-%!TEX root = main.tex
-
+%!TEX root = ./main.tex
 \section{Utility tree}
 The output of the utility tree is a list of scenarios that serves as a plan
 for the remainder of the ATAM evaluation. It shows the evaluation team
@@ -15,6 +14,28 @@ system, which in our case are security, reliability, and compatibility.
 \end{figure}
 
 \section{Key driver verification}
-\subsection{Security}
-\subsection{Compatibility}
-\subsection{Reliability}
+In this section, we analyse and verify the patterns used for the system according to the key drivers that have been selected by the stakeholders.\\
+To perform this analysis, we place the key drivers and patterns in a table and show how each key driver is affected by the selected pattern \cite{web:patterns-v-QAs} . In order to perform this analysis, a scale is used to show how much a specific key driver is affected where,
+\begin{description}
+\begin{itemize}
+  \item[-- --] the pattern has the worst effect on the key driver
+  \item[--] the pattern has a bad but not terrible effect
+  \item[/] the pattern's effect on the key driver is neutral
+  \item[+] the pattern has a good effect although not the best  
+  \item[++] the pattern has the best possible effect on the particular key driver
+\end{itemize}
+\end{description}
+As a reference for some of the weightings depicted in the table, 
+
+\begin{table}[H]
+    \begin{tabularx}{\textwidth}{p{3.5cm}|>{\centering\arraybackslash}X|>{\centering\arraybackslash}X|>{\centering\arraybackslash}X}
+    	 & \textbf{Security} & \textbf{Reliability} & \textbf{Compatibility} \\ \hline
+    	\textbf{replicated system}         & /  & +  &  \\ \hline
+    	\textbf{Model View Controller}  & /  & / &   \\ \hline
+    	\textbf{layers}                    & ++ & /  &   \\ \hline
+    	\textbf{trusted subsystem}         & ++ & /  &   \\ \hline
+    	\textbf{master-slave replication}  & /  & ++ &   \\ \hline
+	 \textbf{TOTAL} & \textbf{} & \textbf{} & \textbf{} \\
+    \end{tabularx}
+    \caption{Key driver verification table}
+\end{table}
