fix \item error

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -16,15 +16,15 @@ system, which in our case are security, reliability, and compatibility.
 \section{Key driver verification}
 In this section, we analyse and verify the patterns used for the system according to the key drivers that have been selected by the stakeholders.\\
 To perform this analysis, we place the key drivers and patterns in a table and show how each key driver is affected by the selected pattern \cite{web:patterns-v-QAs} . In order to perform this analysis, a scale is used to show how much a specific key driver is affected where,
-\begin{description}
+%\begin{description}
 \begin{itemize}
-  \item[-- --] the pattern has the worst effect on the key driver
-  \item[--] the pattern has a bad but not terrible effect
+  \item[--] the pattern has the worst effect on the key driver
+  \item[-] the pattern has a bad but not terrible effect
   \item[/] the pattern's effect on the key driver is neutral
   \item[+] the pattern has a good effect although not the best  
   \item[++] the pattern has the best possible effect on the particular key driver
 \end{itemize}
-\end{description}
+%\end{description}
 As a reference for some of the weightings depicted in the table, 
 
 \begin{table}[H]
