--- a/requirements.tex
+++ b/requirements.tex
@@ -95,7 +95,7 @@ In order to determine the most important key drivers for our system, the stakeho
      	FR-4 & Must & The system should verify which cart sends which data (or train actually). \\
      	\hline
      	FR-5 & Must & Phones should be verified based on accounts.\\ \hline        
-     	FR-6 & Must & The system should provide a back-up to log out of the trip in case battery dies via touch-screen panels in stations.\\ \hline
+     	FR-6 & Must & The system should provide a back-up to log out of the trip in case battery dies, via touch-screen panels in stations.\\ \hline
      	FR-7 & Must & The beacons will start connecting to mobile devices once the train is 300m away from the station.\\ \hline
     	FR-8 & Must & Phone application should have beacon verification.\\	\hline
 	    FR-9 & Must & The train will collect data from the carts/beacons and send them to the server  after leaving a station. \\ 	\hline
@@ -132,10 +132,10 @@ In order to determine the most important key drivers for our system, the stakeho
   \begin{table}[H]
     \centering
     \begin{tabularx}{\textwidth}{l|l|X}
-      NF-1.1 &Must & The databases must be available 99.9999\% of the time during a train journey.\\ \hline
-      NF-1.2 &Must & The system must be fault tolerant.  \\ \hline
-      NF-1.3 &Must & The beacons inside the carts will be operational at all times when the train is working. \\ \hline
-      NF-1.4 &Must & The Server/database will be 99.999\% available , with backups . \\  
+      NF-2.1 &Must & The databases must be available 99.9999\% of the time during a train journey.\\ \hline
+      NF-2.2 &Must & The system must be fault tolerant.  \\ \hline
+      NF-2.3 &Must & The beacons inside the carts will be operational at all times when the train is working. \\ \hline
+      NF-2.4 &Must & The Server/database will be 99.999\% available , with backups . \\  
     \end{tabularx}
   \end{table}
 }
@@ -146,21 +146,21 @@ In order to determine the most important key drivers for our system, the stakeho
   \begin{table}[H]
     \centering
     \begin{tabularx}{\textwidth}{l|l|X}
-      NF-1.1 &Must & The system should be compatible with the 3 main os (ios, android, windows). \\ \hline
-      NF-1.2 &Must & Compatible frequencies. \\ 
+      NF-3.1 &Must & The system should be compatible with the 3 main os (ios, android, windows). \\ \hline
+      NF-3.2 &Must & Compatible frequencies. \\ 
      
     \end{tabularx}
   \end{table}
 }
 
 
-\section{Constraints}
+%\section{Constraints}
 
-A constraints is \cite{web:bus-doc} considered as an element, factor, or subsystem that works as a bottleneck. It restricts an entity, project, or system (such as a manufacturing or decision making process) from achieving its potential (or higher level of output) with reference to its goal. We are going to analyze the constraints of our systems in three different categories: organisational, business and technological.
+%A constraint is \cite{web:bus-doc} considered as an element, factor, or subsystem that works as a bottleneck. It restricts an entity, project, or system (such as a manufacturing or decision making process) from achieving its potential (or higher level of output) with reference to its goal. We are going to analyze the constraints of our systems in three different categories: organisational, business and technological.
 
-\subsection{Organisational Constraints}
-\subsection{Business Constraints}
-\subsection{Technological Constraints}
+%\subsection{Organisational Constraints}
+%\subsection{Business Constraints}
+%\subsection{Technological Constraints}
 
-\section{Risk Assessment}
-\input{./risk_assessment.tex}
+%\section{Risk Assessment}
+%\input{./risk_assessment.tex}
